# LIFPROJET_ChessEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
ChessApp/: CMakeLists.txt
ChessApp/Sources/: Main.cpp
ChessApp/Sources/Application/: Application.cpp  Application.h  Box.cpp  Renderer.cpp  Renderer.h
ChessEngine/: CMakeLists.txt
ChessEngine/Includes/Core/: ChessGame.h  ChessPiece.h  Player.h
ChessEngine/Includes/IA/: ChessIA.h
ChessEngine/Includes/Utils/: Demo.h  Utils.h
ChessEngine/Sources/Core/: ChessGame.cpp  ChessPiece.cpp  Player.cpp
ChessEngine/Sources/IA/: ChessIA.cpp
ChessEngine/Sources/Utils/: Demo.cpp  Utils.cpp
Sources/Application/: Application.h  Box.h  Renderer.h
Sources/Core/: ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  Player.cpp  Player.h
Sources/IA/: ChessIA.cpp  ChessIA.h
Sources/Utils/: Demo.cpp  Demo.h  Utils.cpp
data/: Game.txt
src/: application.cpp  application.h  box.cpp  box.h  chessgame.cpp  chessgame.h  chesspiece.cpp  chesspiece.h  main.cpp  renderer.cpp  renderer.h  utils.h
